--- a/Wildfire/Views/SettingsView.xaml
+++ b/Wildfire/Views/SettingsView.xaml
@@ -7,24 +7,23 @@
 
     <ContentPage.Content>
         <ScrollView>
-        <Grid>
+        <Grid RowSpacing="7">
             <Grid.RowDefinitions>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="5"/>
-                    <RowDefinition Height="42"/>
-                    <RowDefinition Height="10"/>
-                <RowDefinition Height="35" />
+                <RowDefinition Height="0"/>
+                <RowDefinition Height="0"/>
+                <RowDefinition Height="56"/>
+                <RowDefinition Height="0"/>
+                <RowDefinition Height="40" />
                 <RowDefinition Height="100"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="45"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="20
-                               "/>
-                <RowDefinition Height="45"/> <!-- 10 -->
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="45"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="45"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="0"/>
+                <RowDefinition Height="56"/> <!-- 10 -->
+                <RowDefinition Height="0"/>
+                <RowDefinition Height="56"/>
+                <RowDefinition Height="0"/>
+                <RowDefinition Height="56"/>
                 <RowDefinition Height="25"/>
                 
             </Grid.RowDefinitions>
@@ -36,7 +35,7 @@
 
             <!--<Label Text="Welcome" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>-->
             
-                <Label  Grid.Row="2" Grid.Column="1" Text="hello" x:Name="settingsDay" FontSize="34" FontAttributes="Bold" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
+                <Label  Grid.Row="2" Grid.Column="1" Text="hello" x:Name="settingsDay" FontSize="34" FontAttributes="Bold" HorizontalOptions="Center" VerticalTextAlignment="Center" VerticalOptions="Center" TextColor="Black" ></Label>
 
             
             
